# TestTaskElement

./: .env.example  .gitignore  README.md  docker-compose.yml  Тестовое_задание_Fullstack.md
.VSCodeCounter/2026-07-21_00-08-22/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/config/: logging.py  settings.py
backend/app/db/: session.py
backend/app/domain/: enums.py  errors.py
backend/app/models/: __init__.py  base.py  booking.py  lot.py  lot_set.py  request.py
backend/app/repositories/: bookings.py  lot_sets.py  lots.py  requests.py
backend/app/schemas/: auth.py  booking.py  common.py  lot.py  lot_set.py  request.py
backend/app/services/: auth.py  booking.py  catalog.py  feed.py  requests.py
backend/app/transports/: deps.py
backend/app/transports/jsonrpc/: dispatcher.py  methods.py
backend/app/transports/rest/routers/: __init__.py  auth.py  bookings.py  lots.py  requests.py  sets.py
backend/tests/: conftest.py  test_auth.py  test_booking.py  test_catalog.py  test_error_mapping.py  test_feed.py  test_requests.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.ts  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.vue
frontend/src/api/: dto.ts  http.ts  index.ts  types.ts
frontend/src/components/: AppPagination.vue  ApplicationDialog.vue  BookingDialog.vue  LotStatusBadge.vue  (+1 more)
(+46 files in other folders)
